[package]
name = "aether-log"
description = "Minimal logging library that uses explicit and configurable endpoints."
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["log", "logging", "logger"]
categories = ["development-tools::debugging"]
repository = "https://github.com/nobbele/aether-log"

[lib]
name = "aether"

[features]
default = ["archive"]
archive = ["dep:zip"]

[dependencies]
lazy_static = "1.4.0"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
zip = { version = "0.6.2", default-features = false, optional = true }
